# flux

./: Cargo.toml  LICENSE  README.md  flux-installer.iss  flux-wiki.html
compiler/: README.md
documentation/: LANGUAGE_SPEC.md
examples/: FXstrings_demo.fx  calculator.fx  features.fx  fxwindows_demo.fx  hello.fx  new_features.fx
flux-ast/: Cargo.toml
flux-ast/src/: lib.rs
flux-cli/: Cargo.toml
flux-cli/src/: main.rs
flux-cli/tests/: integration_test.rs
flux-gui/: Cargo.toml
flux-gui/src/: lib.rs
flux-interpreter/: Cargo.toml
flux-interpreter/src/: lib.rs
flux-lexer/: Cargo.toml
flux-lexer/src/: lib.rs
flux-parser/: Cargo.toml
flux-parser/src/: lib.rs
flux-runtime/: Cargo.toml
flux-runtime/src/: lib.rs
flux_modules/FXstrings/: README.md  flux.toml
flux_modules/FXstrings/flux_modules/FXstrings/: flux.toml
flux_modules/FXstrings/src/: library.fx
installer/: README.md
libraries/FXterminal/: README.md
libraries/FXwindows/: README.md
package_manager/: README.md
registry/FXstrings/: README.md
registry/FXstrings/src/: library.fx
standard_library/: README.md
vscode_extension/: language-configuration.json  package-lock.json  package.json
vscode_extension/src/: extension.ts
vscode_extension/syntaxes/: flux.tmLanguage.json
